--- a/src/background-image.source.css
+++ b/src/background-image.source.css
@@ -1,7 +1,5 @@
-//META{"name":"Holo","description":"","author":"github.com/rzjnzk","version":"0.0.1"}*//{}
-
 /**
- * @name background-image
+ * @name Discord background image theme
  * @version 1.0.0
  * @description
  * @source https://github.com/rzjnzk/discord-themes
