Fixes import, working version.
Signed-off-by: rzjnzk <rzjznk@gmail.com>

--- a/src/BackgroundImage.source.css
+++ b/src/BackgroundImage.source.css
@@ -1,7 +1,7 @@
 #app-mount .app-2rEoOp
 {
-    background-image: url("https://raw.githubusercontent.com/rzjnzk/discord-themes/master/docs/assets/background-default.png") !important;
-    background-size: cover !important;
+    background-image: url("https://rzjnzk.github.io/discord-themes/docs/assets/background-default.png");
+    background-size: cover;
 }
 
 html, body, .da-titleBar
