--- a/src/SquareMessageBox.theme.css
+++ b/src/SquareMessageBox.theme.css
@@ -1,9 +1,9 @@
 /**
- * @name discord-background-image
+ * @name Square Message Box
  * @version 1.0.0
  * @description
  * @source https://github.com/rzjnzk/discord-themes
  * @author Robert Zack Jaidyn Norris-Karr <rzjnzk@gmail.com> <https://github.com/rzjnzk>
-**/
+*/
 
-@import url(https://raw.githubusercontent.com/rzjnzk/discord-themes/master/src/square-message-box.source.css);
+@import url("https://rzjnzk.github.io/discord-themes/src/SquareMessageBox.source.css");
