--- a/src/BackgroundImage.theme.css
+++ b/src/BackgroundImage.theme.css
@@ -10,8 +10,8 @@
 
 #app-mount .app-2rEoOp
 {
-    /* ********************************************************************* */
-    /* Change the following image url to change the themes background image. */
-    /* ********************************************************************* */
+    /* ********************************************************************** */
+    /* Change the following image url to change the theme's background image. */
+    /* ********************************************************************** */
     background-image: url("https://rzjnzk.github.io/discord-themes/docs/assets/background-default.png");
 }
