--- a/src/import/BackgroundImage.theme.css
+++ b/src/import/BackgroundImage.theme.css
@@ -1,17 +1,17 @@
 /**
- * @name Background Image
+ * @name BackgroundImage
  * @version 1.0.0
  * @description Allows the use of a background image behind the default layout.
  * @source https://github.com/rzjnzk/discord-themes
  * @author Robert Zack Jaidyn Norris-Karr <rzjnzk@gmail.com> <https://github.com/rzjnzk>
 */
 
-@import url("https://rzjnzk.github.io/discord-themes/src/BackgroundImage.source.css");
+@import url("https://rzjnzk.github.io/discord-themes/src/styles/BackgroundImage.theme.css");
 
 #app-mount .app-2rEoOp
 {
     /* ********************************************************************** */
     /* Change the following image url to change the theme's background image. */
     /* ********************************************************************** */
-    background-image: url("https://rzjnzk.github.io/discord-themes/docs/assets/background-default.png");
+    background-image: url("https://rzjnzk.github.io/discord-themes/docs/assets/background-default.jpg");
 }
