--- a/src/import/ChannelNameWrap.theme.css
+++ b/src/import/ChannelNameWrap.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name ChannelNameWrap
  * @version 1.0.0
- * @description
+ * @description Enables text and voice channel name textual wrap.
  * @source https://github.com/rzjnzk/discord-themes
  * @author Robert Zack Jaidyn Norris-Karr <rzjnzk@gmail.com> <https://github.com/rzjnzk>
 */
