--- a/src/import/WiderChannelSidebar.theme.css
+++ b/src/import/WiderChannelSidebar.theme.css
@@ -7,3 +7,12 @@
 */
 
 @import url("https://rzjnzk.github.io/discord-themes/src/styles/WiderChannelSidebar.theme.css");
+
+.sidebar-2K8pFh.da-sidebar,
+.bannerImage-1jOskm
+{
+    /* ****************************************************************** */
+    /* Change the following pixel value to set the channel sidebar width. */
+    /* ****************************************************************** */
+    width: 350px;
+}
